tests/rosetta/out/Smalltalk/anti-primes.out
/tmp/anti-primes.st:9: parse error, expected ']'
