tests/rosetta/out/Smalltalk/anti-primes.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| countDivisors count i main maxDiv n line d |
countDivisors := [:n | ((n < 2)) ifTrue: [
1.
] .
count := 2.
i := 2.
[(i <= ((n / 2)))] whileTrue: [.
((((n % i)) = 0)) ifTrue: [
count := (count + 1).
] .
i := (i + 1).
].
.
count. ].
main := [ Transcript show: 'The first 20 anti-primes are:'; cr.
maxDiv := 0.
count := 0.
n := 1.
line := ''.
[(count < 20)] whileTrue: [.
d := countDivisors value: n.
((d > maxDiv)) ifTrue: [
line := (((line + ((n asString)))) + (' ')).
maxDiv := d.
count := (count + 1).
] .
n := (n + 1).
].
.
line := (line copyFrom: 0 to: (((line size)) - 1)).
Transcript show: (line) printString; cr. ].
main value.
